--- a/index.html
+++ b/index.html
@@ -14,29 +14,36 @@
 </head>
 
 <body class="has-background-white-ter">
-<div class="container">
-    <div class="navbar-brand">
-            <span class="navbar-burger burger is-active" data-target="navbarMenu">
+<div class="hero-head">
+
+</div>
+<section class="hero is-medium is-bold">
+    <nav class="navbar">
+        <div class="container">
+            <div class="navbar-brand">
+                <span class="navbar-burger burger" data-target="navbarMenu">
                             <span></span>
                             <span></span>
                             <span></span>
                         </span>
-    </div>
-    <div id="navbarMenu" class="navbar-menu is-active">
-        <div class="navbar-end">
-            <div class="tabs is-right">
-                <ul>
-                    <li class="is-active"><a>Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#access">Access</a></li>
-                </ul>
+            </div>
+            <div id="navbarMenu" class="navbar-menu">
+                <div class="navbar-end">
+                    <div class="tabs is-right">
+                        <ul>
+                            <div class="tabs is-right">
+                                <ul>
+                                    <li class="is-active"><a>Home</a></li>
+                                    <li><a href="#about">About</a></li>
+                                    <li><a href="#access">Access</a></li>
+                                </ul>
+                            </div>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
-<section class="hero is-medium is-bold">
-
-    <!-- END NAV -->
+    </nav>
     <div class="hero-body">
         <div class="container has-text-right">
             <h1 class="title is-1 red-font">AOKI </h1>
@@ -105,11 +112,11 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d342.8771184832998!2d139.13306170581168!3d35.156223093101225!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xdb3484b112a69191!2z6Z2S5pyo5rSL5ZOB5bqX!5e0!3m2!1sja!2sjp!4v1556713226047!5m2!1sja!2sjp" width="600" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
                 <hr/>
+                <p class="has-text-centered">
+                    <a href="https://goo.gl/maps/ovfUCoMY888BedWc6" class="button is-medium is-outlined is-fullwidth is-link is-rounded fa fa-map">　Google Map でみる</a>
+                </p>
             </div>
         </div>
-        <p class="has-text-centered">
-            <a href="https://goo.gl/maps/ovfUCoMY888BedWc6" class="button is-medium is-outlined is-fullwidth is-link is-rounded fa fa-map">　Google Map でみる</a>
-        </p>
     </div>
 </section>
 </body>
