--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>青木洋品店</title>
+    <meta name="description" content="青木洋品店は真鶴駅前にある。洋服と和雑貨のお店です">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <!-- Bulma Version 0.7.2-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.css">
@@ -16,7 +17,6 @@
 
 <body class="has-background-white-ter">
 <div class="hero-head">
-
 </div>
 <section class="hero is-medium is-bold">
     <nav class="navbar">
