--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <div class="column is-10 is-offset-1">
         <div class="media">
             <div class="media-content has-text-centered is-7">
-                <h2 class="title article-title　title is-1 red-font">About</h2>
+                <h2 class="title article-title　title is-1 red-font">ABOUT</h2>
             </div>
         </div>
         <div class="columns is-vcentered">
@@ -92,7 +92,7 @@
     <div class="column is-10 is-offset-1">
         <div class="media">
             <div class="media-content has-text-centered is-7">
-                <h2 class="title article-title　title is-1 red-font">Access</h2>
+                <h2 class="title article-title　title is-1 red-font">ACCESS</h2>
             </div>
         </div>
         <div class="columns is-vcentered">
