--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="container has-text-right">
             <h1 class="title is-1 red-font">AOKI </h1>
             <p class="subtitle is-3 is-spaced">洋服 和雑貨</p>
-            <!--<p class="subtitle is-5 is-spaced">御土産,Recuerdo,Souvenir</p>-->
+            <p class="subtitle is-3 is-spaced">since <strong class="has-text-info">1955</strong></p>
         </div>
     </div>
 </section>
@@ -120,6 +120,11 @@
         </div>
     </div>
 </section>
+<footer class="footer has-background-lighter">
+        <div class="content has-text-centered">
+            2019 by <strong>kaisei aoki</strong>
+        </div>
+</footer>
 </body>
 <script async>
     (function() {
