--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>青木洋品店</title>
+    <title>青木洋品店｜真鶴駅前の洋服と和雑貨のお店</title>
     <meta name="description" content="青木洋品店は真鶴駅前にある。洋服と和雑貨のお店です">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <!-- Bulma Version 0.7.2-->
@@ -15,6 +15,54 @@
     <meta name="google-site-verification" content="2EAFbTrH_T9t470_7qetCCXZe11UnFZr5WZrS0dWu5w" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-139448959-1"></script>
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "LocalBusiness",
+      "name": "青木洋品店｜真鶴駅前の洋服と和雑貨のお店",
+      "description": "青木洋品店は洋服と和雑貨のお店です
+                    おかげさまで創業６４年を迎えました
+                    当店では、お洋服やお土産を品数豊富に取り揃えております。
+                    真鶴町に立ち寄った方、真鶴町にお住まいの方、ぜひ一度ご来店ください。
+                    スタッフ一同、誠心誠意サービスさせていただきます。",
+      "telephone": "0465-68-2155", //電話番号
+      "url": "https://aoki-so-close.github.io/manazuru-yofuku/index.html",
+      "priceRange":"4000", //平均的な予算 ,
+      "image": [
+        "https://aoki-so-close.github.io/manazuru-yofuku/neko.jpg",
+        "https://aoki-so-close.github.io/manazuru-yofuku/front.jpg",
+      ],
+      "address": {
+       "@type": "PostalAddress",
+        "addressCountry": "JP",
+        "postalCode": "259-0201",
+        "addressRegion": "神奈川県",
+        "addressLocality": "足柄下郡",
+        "streetAddress": "真鶴町真鶴４０３−１"
+      },
+      "openingHoursSpecification": [ //営業日と営業時間
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday"
+      ],
+      "opens": "9:00", //開店時間
+      "closes": "17:00" //閉店時間
+      },
+      { //定休日
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+       "Tuesday"
+      ],
+      "opens": "00:00", //定休日のため開店時間は00:00
+      "closes": "00:00" //定休日のため閉店時間も00:00
+      }
+      ]
+    }
+</script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -22,7 +70,6 @@
 
     gtag('config', 'UA-139448959-1');
     </script>
-
 </head>
 
 <body class="has-background-white-ter">
@@ -85,13 +132,13 @@
                 <h4 class="subtitle is-4">
                     おかげさまで創業６４年を迎えました
                 </h4>
-                <p>
+                <p class="is-size-6">
                     当店では、お洋服やお土産を品数豊富に取り揃えております。
                 </p>
-                <p>
+                <p class="is-size-6">
                     真鶴町に立ち寄った方、真鶴町にお住まいの方、ぜひ一度ご来店ください。
                 </p>
-                <p>
+                <p class="is-size-6">
                     スタッフ一同、誠心誠意サービスさせていただきます。
                 </p>
             </div>
@@ -113,7 +160,7 @@
             </div>
             <hr/>
             <div class="column is-6">
-                <h3 class="title is-2">
+                <h3 class="title is-3">
                     JR真鶴駅から徒歩1分
                 </h3>
                 <h4 class="subtitle is-4">
@@ -130,7 +177,60 @@
         </div>
     </div>
 </section>
-<footer class="footer has-background-lighter">
+<section class="has-background-white-bis" id="access">
+    <div class="column is-10 is-offset-1">
+        <div class="media">
+            <div class="media-content has-text-centered is-7">
+                <h2 class="title article-title　title is-1 red-font">BUSINESS HOURS</h2>
+            </div>
+        </div>
+        <div class="has-text-centered">
+            <h3 class="title is-3">
+                営業時間は午前９時から午後５時です。
+            </h3>
+            <h4 class="subtitle is-4">
+                We are open from between 9am and 5pm.
+            </h4>
+        </div>
+        <div class="column is-6 is-offset-3">
+            <nav class="level is-mobile">
+                <div class="level-item has-text-centered">
+                    <div>
+                        <p class="heading">Open</p>
+                        <p class="title">9:00 am</p>
+                    </div>
+                </div>
+                <div class="level-item has-text-centered">
+                    <div>
+                        <p class="heading">Close</p>
+                        <p class="title">5:00 pm</p>
+                    </div>
+                </div>
+            </nav>
+            <hr/>
+        </div>
+        <div class="columns is-vcentered has-text-centered">
+            <div class="column is-12">
+
+                <h3 class="title is-3 has-text-danger">
+                   火曜日は定休日となっております。
+                </h3>
+                <h4 class="subtitle is-4 has-text-danger">
+                    We are regularly closed on Tuesday.
+                </h4>
+                <p>
+                    ご迷惑をおかけしますがよろしくお願いいたします。
+                </p>
+                <p>
+                    その他、休業情報ついてはその都度掲載させていただきます。
+                </p>
+                <p>
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+<footer class="footer has-background-white-ter"">
         <div class="content has-text-centered">
             2019 by <strong>kaisei aoki</strong>
         </div>
