--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     スタッフ一同、誠心誠意サービスさせていただきます。",
       "telephone": "0465-68-2155", //電話番号
       "url": "https://aoki-so-close.github.io/manazuru-yofuku/index.html",
-      "priceRange":"4000", //平均的な予算 ,
-      "image": [
-        "https://aoki-so-close.github.io/manazuru-yofuku/neko.jpg",
-        "https://aoki-so-close.github.io/manazuru-yofuku/front.jpg",
-      ],
+      "priceRange":"4000",
+    "image": [
+       "https://aoki-so-close.github.io/manazuru-yofuku/neko.jpg",
+       "https://aoki-so-close.github.io/manazuru-yofuku/front.jpg"
+     ],
       "address": {
        "@type": "PostalAddress",
         "addressCountry": "JP",
@@ -44,10 +44,12 @@
         {
           "@type": "OpeningHoursSpecification",
           "dayOfWeek": [
-          "Tuesday",
+           "Monday",
           "Wednesday",
           "Thursday",
-          "Friday"
+          "Friday",
+           "Saturday",
+      		"Sunday"
       ],
       "opens": "9:00", //開店時間
       "closes": "17:00" //閉店時間
@@ -230,7 +232,7 @@
         </div>
     </div>
 </section>
-<footer class="footer has-background-white-ter"">
+<footer class="footer has-background-white-ter">
         <div class="content has-text-centered">
             2019 by <strong>kaisei aoki</strong>
         </div>
