--- a/index.html
+++ b/index.html
@@ -104,11 +104,20 @@
             </div>
         </div>
     </nav>
-    <div class="hero-body">
-        <div class="container has-text-right">
-            <h1 class="title is-1 red-font">AOKI </h1>
-            <p class="subtitle is-3 is-spaced">洋服 和雑貨</p>
-            <p class="subtitle is-3 is-spaced">since <strong class="has-text-info">1955</strong></p>
+    <div class="column is-12">
+        <div class="columns is-vcentered is-mobile is-multiline">
+            <div class="column is-4">
+                <figure class="image is-1by1">
+                    <picture>
+                        <source type=image/webp srcset=neko.webp>
+                        <img src="neko.png" alt="hero image">
+                    </picture>
+                </figure>
+            </div>
+            <div class="column is-8 has-text-center">
+                <h2 class="subtitle is-3">洋服 和雑貨 since<strong class="has-text-info">1955</strong></h2>
+                <h1 class="title is-size-1 red-font">AOKI</h1>
+            </div>
         </div>
     </div>
 </section>
@@ -124,7 +133,10 @@
         <div class="columns is-vcentered">
             <div class="column is-5">
                 <figure class="image is-4by3">
-                    <img src="about1.jpg" alt="Description">
+                    <picture>
+                        <source type=image/webp srcset=about1.webp>
+                        <img src="about1.jpg" alt="hero image">
+                    </picture>
                 </figure>
             </div>
             <div class="column is-7">
@@ -156,9 +168,10 @@
         </div>
         <div class="columns is-vcentered">
             <div class="column is-5">
-                <figure class="image is-4by3">
-                    <img src="shop.jpg" alt="Description">
-                </figure>
+                <picture>
+                    <source type=image/webp srcset=shop.webp>
+                    <img src="shop.jpg" alt="hero image">
+                </picture>
             </div>
             <hr/>
             <div class="column is-6">
@@ -194,12 +207,17 @@
                 We are open from between 9am and 5pm.
             </h4>
         </div>
-        <div class="column is-6 is-offset-3">
+        <div class="column is-4 is-offset-4">
             <nav class="level is-mobile">
                 <div class="level-item has-text-centered">
                     <div>
                         <p class="heading">Open</p>
                         <p class="title">9:00 am</p>
+                    </div>
+                </div>
+                <div class="level-item has-text-centered">
+                    <div>
+                        <p class="title">-</p>
                     </div>
                 </div>
                 <div class="level-item has-text-centered">
