--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>青木洋品店｜真鶴駅前の洋服と和雑貨のお店</title>
-    <meta name="description" content="青木洋品店は真鶴駅前にある。洋服と和雑貨のお店です">
+    <title>青木洋品店｜真鶴駅前の洋服と和雑貨・お土産のお店</title>
+    <meta name="description" content="青木洋品店は真鶴駅前にある。洋服と和雑貨・お土産のお店です">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,8 +17,8 @@
     {
       "@context": "http://schema.org",
       "@type": "LocalBusiness",
-      "name": "青木洋品店｜真鶴駅前の洋服と和雑貨のお店",
-      "description": "青木洋品店は洋服と和雑貨のお店です
+      "name": "青木洋品店｜真鶴駅前の洋服と和雑貨・お土産のお店",
+      "description": "青木洋品店は洋服と和雑貨・お土産のお店です
                     おかげさまで創業６４年を迎えました
                     当店では、お洋服やお土産を品数豊富に取り揃えております。
                     真鶴町に立ち寄った方、真鶴町にお住まいの方、ぜひ一度ご来店ください。
@@ -113,7 +113,7 @@
                 </figure>
             </div>
             <div class="column is-8 has-text-center">
-                <h2 class="subtitle is-3">洋服 和雑貨 since<strong class="has-text-info">1955</strong></h2>
+                <h2 class="subtitle is-3">洋服 和雑貨 お土産 since<strong class="has-text-info">1955</strong></h2>
                 <h1 class="title is-size-1 red-font">AOKI</h1>
             </div>
         </div>
@@ -139,7 +139,7 @@
             </div>
             <div class="column is-7">
                 <h3 class="title is-2">
-                    洋服と和雑貨のお店です
+                    洋服と和雑貨・お土産のお店です
                 </h3>
                 <h4 class="subtitle is-4">
                     おかげさまで創業６４年を迎えました
