--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 </figure>
             </div>
             <div class="column is-8 has-text-center">
-                <h2 class="subtitle is-3">洋服 和雑貨 お土産 since<strong class="has-text-info">1955</strong></h2>
+                <h2 class="subtitle is-3">洋服 和雑貨 since<strong class="has-text-info">1955</strong></h2>
                 <h1 class="title is-size-1 red-font">AOKI</h1>
             </div>
         </div>
@@ -138,14 +138,14 @@
                 </figure>
             </div>
             <div class="column is-7">
-                <h3 class="title is-2">
-                    洋服と和雑貨・お土産のお店です
+                <h3 class="title is-3">
+                    洋服と和雑貨のお店です
                 </h3>
                 <h4 class="subtitle is-4">
                     おかげさまで創業６４年を迎えました
                 </h4>
                 <p class="is-size-6">
-                    当店では、お洋服やお土産を品数豊富に取り揃えております。
+                    当店では、お洋服や和雑貨・お土産を品数豊富に取り揃えております。
                 </p>
                 <p class="is-size-6">
                     真鶴町に立ち寄った方、真鶴町にお住まいの方、ぜひ一度ご来店ください。
