--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     JR真鶴駅から徒歩1分
                 </h3>
                 <h4 class="subtitle is-4">
-                    お車でお越しの方は向かいの寿司屋横の駐車場をご利用ください
+                    お車でお越しの方は「丸福ひもの店隣駐車場 C AOKI」にお願いします
                 </h4>
                 <div>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d342.8771184832998!2d139.13306170581168!3d35.156223093101225!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xdb3484b112a69191!2z6Z2S5pyo5rSL5ZOB5bqX!5e0!3m2!1sja!2sjp!4v1556713226047!5m2!1sja!2sjp" width="600" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
