--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 営業時間は午前９時から午後５時です。
             </h3>
             <h4 class="subtitle is-4">
-                We are open from between 9am and 5pm.
+               We are open from 9am to 5pm.
             </h4>
         </div>
         <div class="column is-4 is-offset-4">
