--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 </section>
 <footer class="footer has-background-white-ter">
         <div class="content has-text-centered">
-            2019 by <strong>kaisei aoki</strong>
+            All rights reserved <strong>青木洋品店</strong>
         </div>
 </footer>
 </body>
