--- a/index.html
+++ b/index.html
@@ -51,12 +51,8 @@
 }
 </script>
  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-139448959-1');
-    </script>
+  window.location.href('https://aoki-so-close.github.io/')  
+ </script>
 </head>
 
 <body class="has-background-white-ter">
