--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 }
 </script>
  <script>
-  window.location.href('https://aoki-so-close.github.io/')  
+  location.href('https://aoki-so-close.github.io/')  
  </script>
 </head>
 
